--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
-<p>Hello there</p>
+<!DOCTYPE = html>
+<html lang="en">
+
+<head>
+
+<meta charset="utf-8" />
+<title>Alpha Point Partners Blog</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!--Link all stylesheets-->
+<link rel="stylesheet" href="./Resources/CSS/Main.css">
+
+</head>
+
+<body>
+
+<!--Nav Bar Section-->
+<header>
+
+    <a href="./Index.html"><img class="logo" src="./Resources/Images/logo1.png" alt="logo"></a>
+    <div class="dropdown">
+        <button class="dropbtn">Blog Picks of the Week</button>
+        <div class="dropdown-content">
+          <a href="./Blog-Post.html">New York Condos</a>
+          <a href="./Blog-Post.html">Toronto Townhouses</a>
+          <a href="./Blog-Post.html">Modern Studios</a>
+          <a href="./Blog-Post.html">Zen Living</a>
+        </div>
+    </div>
+
+</header>
+
+<h1 class="posts-title">Blog Posts</h1>
+
+<!--Blog Post Grid-->
+<section class="cards-section">
+  <div class="card-grid">
+<!--Blog Post 1-->
+    <a class="card" href="./Blog-Post.html">
+      <div class="card__background1"></div>
+      <div class="card__content">
+        <h3 class="card__category"><i>Staff Pick</i></h3>
+        <h2 class="card__heading">NY Condos</h2>
+      </div>
+    </a>
+<!--Blog Post 2-->
+    <a class="card" href="./Blog-Post.html">
+      <div class="card__background2"></div>
+      <div class="card__content">
+        <h3 class="card__category"><i>Most Read</i></h3>
+        <h2 class="card__heading">Toronto Townhouses</h2>
+      </div>
+    </a>
+<!--Blog Post 3-->
+    <a class="card" href="./Blog-Post.html">
+      <div class="card__background3"></div>
+      <div class="card__content">
+        <h3 class="card__category"><i>Most Read</i></h3>
+        <h2 class="card__heading">Modern Studios</h2>
+      </div>
+    </a>
+<!--Blog Post 4-->
+    <a class="card" href="./Blog-Post.html">
+      <div class="card__background4"></div>
+      <div class="card__content">
+        <h3 class="card__category"><i>Staff Pick</i></h3>
+        <h2 class="card__heading">Zen Living</h2>
+      </div>
+    </a>
+  <div>
+</section>
+
+<footer>
+  <div class="container">
+    <div class="footer-left-side">
+      <p><b>Copyright © 2020 Alpha Point Partners</b></p>
+      <blockquote>#1 Real Estate Brokers in New York City</blockquote>
+      <button class="footer-button">Contact Us</button>
+    </div>
+    <div class="footer-mid">
+      <p class="read-more-footer"><b>Read More</b></p>
+      <ul>
+        <a href="./Blog-Post.html"><li>Staff Picks</li></a>
+        <a href="./Blog-Post.html"><li>Most Read</li></a>
+        <a href="./Blog-Post.html"><li>New Posts</li></a>
+      </ul>
+    </div>
+    <div class="footer-right-side">
+      <p><b>Social Media</b></p>
+      <div class="social-media-logos">
+        <a href="https://github.com/sanvespinosa"><img src="./Resources/Images/github.png" alt="github"></a>
+        <a href="https://www.linkedin.com/in/santiago-vasquez/"><img src="./Resources/Images/linkedin.png" alt="github"></a>
+        <a href="#"><img src="./Resources/Images/instagram.png" alt="github"></a>
+      </div>
+    </div>
+  </div>
+</footer>
+
+</body>
+
+</html>
