--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!--Nav Bar Section-->
 <header>
 
-    <a href="./Index.html"><img class="logo" src="./Resources/Images/logo1.png" alt="logo"></a>
+    <a href="./index.html"><img class="logo" src="./Resources/Images/logo1.png" alt="logo"></a>
     <div class="dropdown">
         <button class="dropbtn">Blog Picks of the Week</button>
         <div class="dropdown-content">
